@@ -3,7 +3,6 @@ package com.patriot.fourlipsclover.restaurant.service;
 import static co.elastic.clients.elasticsearch._types.query_dsl.TextQueryType.BestFields;
 
 import co.elastic.clients.elasticsearch.ElasticsearchClient;
-import co.elastic.clients.elasticsearch._types.ElasticsearchException;
 import co.elastic.clients.elasticsearch._types.query_dsl.BoolQuery;
 import co.elastic.clients.elasticsearch._types.query_dsl.NestedQuery;
 import co.elastic.clients.elasticsearch._types.query_dsl.Query;
@@ -11,17 +10,14 @@ import co.elastic.clients.elasticsearch.core.SearchRequest;
 import co.elastic.clients.elasticsearch.core.SearchResponse;
 import co.elastic.clients.elasticsearch.core.search.Hit;
 import com.patriot.fourlipsclover.restaurant.document.RestaurantDocument;
-import com.patriot.fourlipsclover.restaurant.dto.request.RestaurantTagSearchRequest;
 import com.patriot.fourlipsclover.restaurant.dto.response.RestaurantResponse;
-import com.patriot.fourlipsclover.restaurant.dto.response.RestaurantSearchResponse;
-import com.patriot.fourlipsclover.restaurant.mapper.RestaurantMapper;
 import com.patriot.fourlipsclover.restaurant.mapper.RestaurantSearchMapper;
 import com.patriot.fourlipsclover.tag.entity.Tag;
 import com.patriot.fourlipsclover.tag.repository.TagRepository;
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Objects;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
@@ -30,34 +26,10 @@ import org.springframework.stereotype.Service;
 public class RestaurantElasticsearchService {
 
 	private final ElasticsearchClient elasticsearchClient;
-	private final RestaurantMapper restaurantMapper;
 	private final RestaurantSearchMapper restaurantSearchMapper;
 	private final TagRepository tagRepository;
 
-	public List<RestaurantResponse> searchRestaurants(String query) {
-		try {
-			SearchResponse<RestaurantDocument> response = elasticsearchClient.search(s -> s
-							.index("restaurants")
-							.size(20)
-							.query(q -> q
-									.multiMatch(mm -> mm
-											.query(query)
-											.fields(List.of("name^3", "address^2", "category", "tags"))
-											.type(BestFields)
-									)
-							),
-					RestaurantDocument.class
-			);
-			List<RestaurantDocument> restaurantDocuments = response.hits().hits().stream()
-					.map(Hit::source)
-					.toList();
-			return restaurantMapper.documentToDto(restaurantDocuments);
-		} catch (IOException e) {
-			throw new RuntimeException("식당 검색 중 오류가 발생했습니다.", e);
-		}
-	}
-
-	public List<RestaurantSearchResponse> searchRestaurantsByLocation(double lat, double lon,
+	public List<RestaurantResponse> searchRestaurantsByLocation(double lat, double lon,
 			int distanceInMeters) {
 		try {
 			Query geoDistanceQuery = Query.of(q -> q
@@ -78,32 +50,27 @@ public class RestaurantElasticsearchService {
 					.map(Hit::source)
 					.map(restaurantSearchMapper::toResponse)
 					.toList();
-		} catch (ElasticsearchException e) {
-			System.out.println(e.response().error());
 		} catch (IOException e) {
 			throw new RuntimeException("위치 기반 식당 검색 중 오류가 발생했습니다.", e);
 		}
-		return null;
 	}
 
 
-	public List<RestaurantSearchResponse> searchByTagsAndQuery(RestaurantTagSearchRequest request) {
+	public List<RestaurantResponse> searchByTagsAndQuery(String query, List<Long> tagIds) {
 		try {
 			BoolQuery.Builder boolQueryBuilder = new BoolQuery.Builder();
-
-			if (request.getQuery() != null && !request.getQuery().isBlank()) {
+			if (query != null && !query.isBlank()) {
 				boolQueryBuilder.must(q -> q
 						.multiMatch(mm -> mm
-								.query(request.getQuery().trim())
+								.query(query.trim())
 								.fields(List.of("name^3", "address^2", "category"))
 								.type(BestFields)
-								.fuzziness("AUTO")
 						)
 				);
 			}
 
-			if (request.getTagIds() != null && !request.getTagIds().isEmpty()) {
-				List<Tag> tags = tagRepository.findAllById(request.getTagIds());
+			if (tagIds != null && !tagIds.isEmpty()) {
+				List<Tag> tags = tagRepository.findAllById(tagIds);
 				List<Query> tagQueries = new ArrayList<>();
 
 				for (Tag tag : tags) {
@@ -120,9 +87,9 @@ public class RestaurantElasticsearchService {
 					tagQueries.add(nestedQuery);
 				}
 
-				boolQueryBuilder.should(tagQueries);
-
 				if (!tagQueries.isEmpty()) {
+					boolQueryBuilder.should(tagQueries);
+					// 태그 검색이 있는 경우, 최소 하나의 태그는 일치해야 함
 					boolQueryBuilder.minimumShouldMatch("1");
 				}
 			}
@@ -139,10 +106,34 @@ public class RestaurantElasticsearchService {
 			return response.hits().hits().stream()
 					.map(Hit::source)
 					.map(restaurantSearchMapper::toResponse)
-					.collect(Collectors.toList());
+					.toList();
 
 		} catch (IOException e) {
 			throw new RuntimeException("태그 및 검색어 기반 검색 중 오류가 발생했습니다.", e);
+		}
+	}
+
+	public RestaurantResponse findRestaurantByKakaoPlaceId(String kakaoPlaceId) {
+		try {
+			SearchResponse<RestaurantDocument> response = elasticsearchClient.search(s -> s
+							.index("restaurants")
+							.query(q -> q
+									.term(t -> t
+											.field("kakaoPlaceId")
+											.value(kakaoPlaceId)
+									)
+							),
+					RestaurantDocument.class
+			);
+
+			if (Objects.requireNonNull(response.hits().total()).value() == 0) {
+				throw new RuntimeException("해당 kakaoPlaceId에 일치하는 식당을 찾을 수 없습니다: " + kakaoPlaceId);
+			}
+
+			RestaurantDocument restaurantDocument = response.hits().hits().get(0).source();
+			return restaurantSearchMapper.toResponse(restaurantDocument);
+		} catch (IOException e) {
+			throw new RuntimeException("kakaoPlaceId로 식당 검색 중 오류가 발생했습니다.", e);
 		}
 	}
 }
